// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MAcordionGroup should not render both close all and open all link when state is mixed 1`] = `
<article class="m-accordion-group">
    <div class="m-accordion-group__header m--no-title">
        <div>
            <a href="#" class="m-link m--is-unvisited m--is-button"> <span class="m-link__text"><span class="m-i18n">Open all</span></span>
            </a>   |
            <a href="#" class="m-link m--is-unvisited m--is-button"> <span class="m-link__text"><span class="m-i18n">Close all</span></span>
            </a>
        </div>
    </div>
    <div class="m-accordion-group__body">
        <article class="m-accordion m--is-default m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="1f898763-498e-4c86-969b-b9f5556eaf03" role="tab" aria-expanded="true" aria-controls="controls-1f898763-498e-4c86-969b-b9f5556eaf03" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>A</span> <span class="m-i18n m-accordion__hidden">Click to hide content.</span></div> <span aria-hidden="true" class="m-accordion__header-icon m--is-closed m--is-left m--is-large"></span></div>
            <div role="tabpanel" id="controls-1f898763-498e-4c86-969b-b9f5556eaf03"
                aria-labelledby="1f898763-498e-4c86-969b-b9f5556eaf03" class="m-accordion__body-wrap">
                <div class="m-accordion__body m--has-padding"></div>
            </div>
        </article>
        <article class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="f557f6a1-617b-4675-8051-652989fa6409" role="tab" aria-controls="controls-f557f6a1-617b-4675-8051-652989fa6409" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>B</span> <span class="m-i18n m-accordion__hidden">Click to display content.</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large"></span></div>
        </article>'</div>
</article>
`;

exports[`MAcordionGroup should not render close all link when all accordions are opened 1`] = `
<article class="m-accordion-group">
    <div class="m-accordion-group__header m--no-title">
        <div>
            <a href="#" class="m-link m--is-unvisited m--is-button"> <span class="m-link__text"><span class="m-i18n">Close all</span></span>
            </a>
        </div>
    </div>
    <div class="m-accordion-group__body">
        <article class="m-accordion m--is-default m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="4b94f82f-2ef0-4f5b-af23-e551d5284d28" role="tab" aria-expanded="true" aria-controls="controls-4b94f82f-2ef0-4f5b-af23-e551d5284d28" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>A</span> <span class="m-i18n m-accordion__hidden">Click to hide content.</span></div> <span aria-hidden="true" class="m-accordion__header-icon m--is-closed m--is-left m--is-large"></span></div>
            <div role="tabpanel" id="controls-4b94f82f-2ef0-4f5b-af23-e551d5284d28"
                aria-labelledby="4b94f82f-2ef0-4f5b-af23-e551d5284d28" class="m-accordion__body-wrap">
                <div class="m-accordion__body m--has-padding"></div>
            </div>
        </article>
        <article class="m-accordion m--is-default m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="291a97d0-83e0-448e-828e-65f944cb2fd8" role="tab" aria-expanded="true" aria-controls="controls-291a97d0-83e0-448e-828e-65f944cb2fd8" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>B</span> <span class="m-i18n m-accordion__hidden">Click to hide content.</span></div> <span aria-hidden="true" class="m-accordion__header-icon m--is-closed m--is-left m--is-large"></span></div>
            <div role="tabpanel" id="controls-291a97d0-83e0-448e-828e-65f944cb2fd8"
                aria-labelledby="291a97d0-83e0-448e-828e-65f944cb2fd8" class="m-accordion__body-wrap">
                <div class="m-accordion__body m--has-padding"></div>
            </div>
        </article>'</div>
</article>
`;

exports[`MAcordionGroup should not render open all link when all accordions are closed 1`] = `
<article class="m-accordion-group">
    <div class="m-accordion-group__header m--no-title">
        <div>
            <a href="#" class="m-link m--is-unvisited m--is-button"> <span class="m-link__text"><span class="m-i18n">Open all</span></span>
            </a>
        </div>
    </div>
    <div class="m-accordion-group__body">
        <article class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="a" role="tab" aria-controls="controls-a" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>A</span> <span class="m-i18n m-accordion__hidden">Click to display content.</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large"></span></div>
        </article>
        <article class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="b" role="tab" aria-controls="controls-b" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>B</span> <span class="m-i18n m-accordion__hidden">Click to display content.</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large"></span></div>
        </article>'</div>
</article>
`;

exports[`MAcordionGroup should not render toggle links when concurrent 1`] = `
<article class="m-accordion-group">
    <div class="m-accordion-group__body">
        <article class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="a" role="tab" aria-controls="controls-a" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>A</span> <span class="m-i18n m-accordion__hidden">Click to display content.</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large"></span></div>
        </article>
        <article class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="b" role="tab" aria-controls="controls-b" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>B</span> <span class="m-i18n m-accordion__hidden">Click to display content.</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large"></span></div>
        </article>'</div>
</article>
`;

exports[`MAcordionGroup should render correctly 1`] = `
<article class="m-accordion-group">
    <div class="m-accordion-group__header m--no-title">
        <div>
            <a href="#" class="m-link m--is-unvisited m--is-button"> <span class="m-link__text"><span class="m-i18n">Open all</span></span>
            </a>
        </div>
    </div>
    <div class="m-accordion-group__body">
        <article class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="a" role="tab" aria-controls="controls-a" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>A</span> <span class="m-i18n m-accordion__hidden">Click to display content.</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large"></span></div>
        </article>
        <article class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="b" role="tab" aria-controls="controls-b" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>B</span> <span class="m-i18n m-accordion__hidden">Click to display content.</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large"></span></div>
        </article>'</div>
</article>
`;

exports[`MAcordionGroup should render correctly with title 1`] = `
<article class="m-accordion-group">
    <div class="m-accordion-group__header">
        <div class="m-accordion-group__header__title">title</div>
        <div>
            <a href="#" class="m-link m--is-unvisited m--is-button"> <span class="m-link__text"><span class="m-i18n">Open all</span></span>
            </a>
        </div>
    </div>
    <div class="m-accordion-group__body">
        <article class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="a" role="tab" aria-controls="controls-a" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>A</span> <span class="m-i18n m-accordion__hidden">Click to display content.</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large"></span></div>
        </article>
        <article class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large">
            <div tabindex="0" id="b" role="tab" aria-controls="controls-b" class="m-accordion__header m--has-padding">
                <div class="m-accordion__header__content"><span>B</span> <span class="m-i18n m-accordion__hidden">Click to display content.</span> </div> <span aria-hidden="true" class="m-accordion__header-icon m--is-left m--is-large"></span></div>
        </article>'</div>
</article>
`;
